# pyobjectify

./: .bumpversion.cfg  .flake8  .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  codecov.yml  pyobjectify.py  pyproject.toml  requirements.txt  setup.py  test.py
.github/workflows/: build.yml
docs/: Makefile  conf.py  index.md  objects.inv
docs/_build/: .buildinfo  index.html  search.html  searchindex.js
docs/_build/.doctrees/: environment.pickle  index.doctree
docs/_build/_sources/: index.md.txt
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/doctrees/source/: modules.doctree  pyobjectify.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/source/: modules.rst.txt
docs/_build/html/source/: modules.html  pyobjectify.html
docs/_sources/: index.rst.txt
docs/source/: modules.html  pyobjectify.rst
pyobjectify/: __init__.py  pyobjectify.py
pyobjectify/tests/: test_all.py  test_integration.py  test_unit.py
pyobjectify/tests/data/: data.example  dummy.txt  example.csv  example.json  example.tsv  example.xlsx  test.json
test/: example.xml
