[build-system]
requires = [
    "setuptools",
    "setuptools-scm",
    "wheel",
]
build-backend="setuptools.build_meta"

[project]
name = "pyobjectify"
authors = [{name = "Raymond Wu", email = "wu.raymond@columbia.edu"}]
description="Bridging the gap across the different file formats and streamlining the process to accessing ingested data via Python objects"
readme = "README.md"
version = "0.2.1"
requires-python = ">=3.7"

dependencies = [
    "certifi==2022.12.7",
    "charset-normalizer==3.0.1",
    "idna==3.4",
    "requests==2.28.2",
    "types-requests==2.28.11.15",
    "types-xmltodict==0.13.0.2",
    "urllib3==1.26.14",
    "xmltodict==0.13.0",
    "numpy==1.24.2",
    "pandas==1.5.3",
    "python-dateutil==2.8.2",
    "pytz==2023.2",
    "six==1.16.0",
    "openpyxl==3.1.2"
]

classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]


[project.license]
file = "LICENSE"

[project.urls]
repository = "https://github.com/wu-rymd/pyobjectify"

[project.optional-dependencies]
develop = [
    "black>=22",
    "bump2version>=1.0.0",
    "check-manifest",
    "flake8>=3.7.8",
    "flake8-black>=0.2.1",
    "flake8-pyproject",
    "mypy",
    "pytest>=4.3.0",
    "pytest-cov>=2.6.1",
    "twine",
    "wheel",
    "sphinx==6.1.3",
    "sphinx-rtd-theme==1.2.0",
    "recommonmark==0.7.1",
    "sphinxcontrib-napoleon==0.7"
]

[tool.black]
color = true
line-length = 120
exclude=[
    'pyobjectify/tests/*'
]

[tool.check-manifest]
ignore = [
]

[tool.flake8]
ignore = ['E203', 'W503']
max-line-length=120
exclude=[
    'pyobjectify/tests/*'
]
per-file-ignores= [
    'pyobjectify/__init__.py:F401, F403'
]

[tool.isort]
line_length = 120
known_first_party = 'pydantic'
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
combine_as_imports = true

[tool.mypy]
python_version = '3.10'
# show_error_codes = true
# follow_imports = 'silent'
# strict_optional = true
# warn_redundant_casts = true
# warn_unused_ignores = true
# disallow_any_generics = true
# check_untyped_defs = true
# no_implicit_reexport = true
# warn_unused_configs = true
# disallow_subclassing_any = true
# disallow_incomplete_defs = true
# disallow_untyped_decorators = true
# disallow_untyped_calls = true

[tool.pytest.ini_options]
# asyncio_mode = 'strict'
testpaths = 'pyobjectify/tests'